--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tabler/icons-react": "^2.30.0",
     "autoprefixer": "^10.4.14",
     "framer-motion": "^10.12.22",
     "postcss": "^8.4.26",
